Fix overflow bugs

--- a/styles.css
+++ b/styles.css
@@ -292,7 +292,7 @@ body {
 }
 
 #popup-details-card {
-  /* max-width: calc((100vw - 32px)); */
+  min-width: 300px;
   padding: 16px;
   background-color: #fff;
   border: 1px solid #dfe1e6;
@@ -343,7 +343,7 @@ body {
 
 .popup-images {
   margin-block: 24px;
-  width: 100%;
+  max-width: 100%;
   aspect-ratio: 16/10;
 }
 
@@ -753,14 +753,14 @@ textarea {
     justify-content: center;
     gap: 24px;
     padding-right: 15px;
+    margin-inline: auto;
   }
 
   .project-card:not(.inactive) img {
-    width: 50%;
-    max-width: 700px;
+    max-width: 400px;
     height: auto;
     flex: 1;
-    margin-left: auto;
+    margin: 20px;
   }
 
   .project-card:not(.inactive) .information {
@@ -941,9 +941,8 @@ textarea {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 999px) {
-  .project-card:not(.inactive) img {
-    max-width: 60%;
-    flex: 1;
+  .project-card:not(.inactive) {
+    max-width: 70vw;
   }
 
   #about-me {
